# openrequest

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  openrequest.db  tauri.conf.json
src-tauri/src/: auth.rs  database.rs  importer_exporter.rs  lib.rs  main.rs  oauth.rs
src/components/: ThemeTest.tsx
src/components/Collections/: CollectionsSidebar.tsx
src/components/Environments/: EnvironmentModal.tsx  EnvironmentSelector.tsx  index.ts
src/components/History/: HistoryPanel.tsx
src/components/Layout/: MainLayout.tsx
src/components/RequestBuilder/: AuthTab.tsx  BodyTab.tsx  HeadersTab.tsx  KeyValueEditor.tsx  ParamsTab.tsx  index.tsx
src/components/RequestTabs/: index.tsx
src/components/ResponseViewer/: index.tsx
src/components/ui/: button.tsx  modal.tsx  select.tsx  toast.tsx  variable-input.tsx
src/lib/: design-tokens.ts  theme-context.tsx  types.ts
src/lib/hooks/: useKeyboardShortcuts.ts
src/lib/stores/: collections.ts  environments.ts  history.ts  request.ts  tabs.ts  ui.ts
