[package]
name = "openrequest"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openrequest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 🎓 TEACHING: Using specific compatible versions to avoid edition2024 issues
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.28", features = ["full"] }
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
anyhow = "1.0"
reqwest = { version = "0.12.22", features = ["json"] }
# OAuth 2.0 support
oauth2 = "4.4"
# URL parsing and manipulation for OAuth redirects
url = "2.4"
# Random string generation for PKCE
rand = "0.8"
# Base64 encoding for PKCE
base64 = "0.21"
# SHA256 hashing for PKCE
sha2 = "0.10"
# HMAC for digest authentication and AWS signatures
hmac = "0.12"
# MD5 for digest authentication
md5 = "0.7"
# Hex encoding for digest auth
hex = "0.4"

